int based cpp version of fft!

--- a/3rdparty/measureFreqXcorr/html/measureFreqXcorr1_watch.html
+++ b/3rdparty/measureFreqXcorr/html/measureFreqXcorr1_watch.html
@@ -11,33 +11,33 @@
 </tr>
 </thead>
 <tbody onmouseover="watchMouseOver(event);" onmouseout="watchMouseOut(event);" onclick="watchClick(event);">
-<tr class="var type1" id="S2T2">
+<tr class="var type1" id="S2T22">
 <td id="blank"></td><td>1</td>
 <td id=""><a href="#">F</a></td>
 <td>Output</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">No</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S3T2">
+<tr class="var type1" id="S3T22">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">snr</a></td>
 <td>Output</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">No</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S4T25">
+<tr class="var type1" id="S4T27">
 <td id="blank"></td><td>3</td>
 <td id=""><a href="#">w</a></td>
 <td>Output</td><td class="watchsize" id="16">1 x 8192</td>
 <td class="watchcomplex">Yes</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
 <tr class="var type1" id="S5T1">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">s</a></td>
 <td>Input</td><td class="watchsize" id="16">1 x 8192</td>
 <td class="watchcomplex">No</td>
-<td class="watchclass">double</td>
+<td class="watchclass">int32</td>
 </tr>
 <tr class="var type1" id="S6T2">
 <td id="blank"></td><td>5</td>
@@ -46,61 +46,61 @@
 <td class="watchcomplex">No</td>
 <td class="watchclass">double</td>
 </tr>
-<tr class="var type1" id="S7T2">
+<tr class="var type1" id="S7T22">
 <td id="blank"></td><td>6</td>
 <td id=""><a href="#">Fs</a></td>
 <td>Input</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">No</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S9T25">
+<tr class="var type1" id="S10T27">
 <td id="blank"></td><td>7</td>
 <td id=""><a href="#">sh</a></td>
 <td>Local</td><td class="watchsize" id="16">1 x 8192</td>
 <td class="watchcomplex">Yes</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S12T2">
+<tr class="var type1" id="S13T2">
 <td id="blank"></td><td>8</td>
 <td id=""><a href="#">i</a></td>
 <td>Local</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">No</td>
 <td class="watchclass">double</td>
 </tr>
-<tr class="var type1" id="S13T21">
+<tr class="var type1" id="S14T23">
 <td id="blank"></td><td>9</td>
 <td id=""><a href="#">M</a></td>
 <td>Local</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">Yes</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S14T2">
+<tr class="var type1" id="S15T2">
 <td id="blank"></td><td>10</td>
 <td id=""><a href="#">p</a></td>
 <td>Local</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">No</td>
 <td class="watchclass">double</td>
 </tr>
-<tr class="var type1" id="S16T29">
+<tr class="var type1" id="S17T31">
 <td id="blank"></td><td>11</td>
 <td id=""><a href="#">idx</a></td>
 <td>Local</td><td class="watchsize" id="9">1 x 7</td>
 <td class="watchcomplex">No</td>
 <td class="watchclass">double</td>
 </tr>
-<tr class="var type1" id="S17T41">
+<tr class="var type1" id="S18T43">
 <td id="blank"></td><td>12</td>
 <td id=""><a href="#">PP</a></td>
 <td>Local</td><td class="watchsize" id="5">1 x 3</td>
 <td class="watchcomplex">Yes</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
-<tr class="var type1" id="S19T21">
+<tr class="var type1" id="S20T23">
 <td id="blank"></td><td>13</td>
 <td id=""><a href="#">PZ</a></td>
 <td>Local</td><td class="watchsize" id="3">1 x 1</td>
 <td class="watchcomplex">Yes</td>
-<td class="watchclass">double</td>
+<td class="watchclass">single</td>
 </tr>
 </tbody>
 </table>
